# cli-learn

./: .gitignore  MIGRATION.md  NEXT_STEPS.md  README.md  guangzhou_weather.txt  pyproject.toml
src/paicli_py/: cli.py  config.py
src/paicli_py/agent/: __init__.py  orchestrator.py  plan_execute.py  react.py
src/paicli_py/browser/: __init__.py  service.py
src/paicli_py/image/: __init__.py  input.py
src/paicli_py/llm/: __init__.py  openai_compatible.py  types.py
src/paicli_py/mcp/: __init__.py  client.py  config.py  events.py  formatting.py  jsonrpc.py  manager.py  mention.py  notifications.py  prompts.py  protocol.py  resources.py  sampling.py  server.py
src/paicli_py/memory/: __init__.py  manager.py
src/paicli_py/plan/: __init__.py  execution_plan.py
src/paicli_py/policy/: __init__.py  command_guard.py  path_guard.py  policy_error.py
src/paicli_py/prompt/: __init__.py  assembler.py  repository.py
src/paicli_py/rag/: __init__.py  analyzer.py  chunker.py  embedding.py  retriever.py  retriever_types.py  store.py
src/paicli_py/runtime/: __init__.py  api.py  task.py
tests/: test_agent.py  test_browser.py  test_cli.py  test_image.py  test_llm.py  test_mcp.py  test_mcp_http_transport.py  test_mcp_manager.py  test_mcp_mention.py  test_mcp_notifications.py  test_mcp_prompt_manager.py  test_mcp_prompts.py  test_mcp_sampling.py  test_mcp_stdio_transport.py  test_memory.py  test_multi_agent.py  test_plan.py  test_policy.py  test_prompt.py  test_rag.py  test_runtime.py  test_skill.py  test_snapshot.py  test_tool_registry.py  test_web.py
(+42 files in other folders)
